--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,10 @@
 * {
-  font-family: "Coiny", system-ui;
-  font-weight: 400;
-  font-style: normal;
   scroll-behavior: smooth;
+}
+
+a {
+  color: black;
+  text-decoration: none;
 }
 
 body {
@@ -32,13 +34,27 @@ body::before {
   /* Meletakkan gambar di belakang konten */
 }
 
+.logo {
+  width: 70px;
+  margin-right: 20px;
+}
+
+ul {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+}
+
 .container {
+  background: linear-gradient(-145deg, #FFF7CD, #FDC3A1, #FB9B8F, #F57799);
   position: relative;
   z-index: 1;
   width: 50%;
   height: 100%;
   border-radius: 50px 50px 0px 0px;
-  background: linear-gradient(-145deg, #FFF7CD, #FDC3A1, #FB9B8F, #F57799);
+  font-family: "Coiny", system-ui;
+  font-weight: 400;
+  font-style: normal;
 }
 
 .hero {
@@ -51,19 +67,11 @@ body::before {
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
 }
 
-a {
-  color: black;
-  text-decoration: none;
-}
 
 /* nav {
 
 } */
 
-.logo {
-  width: 70px;
-  margin-right: 20px;
-}
 
 .menu {
   display: flex;
@@ -94,17 +102,31 @@ a {
   padding: 30px;
 }
 
+/* .card-produk:hover {} */
 
-ul {
-  display: flex;
-  align-items: center;
-  gap: 12px;
+
+.keranjang {
+  text-align: center;
 }
 
-
+button.orderwa {
+  background-color: #25D366;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
 
 footer {
   background-color: red;
   text-align: center;
   height: 200px;
+  font-family: "Zalando Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+  font-variation-settings:
+    "wdth" 100;
 }
